fix deprecated boolean