@@ -12,6 +12,7 @@ import org.springframework.core.io.UrlResource;
 
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.stream.Stream;
@@ -93,7 +94,7 @@ public class QiniuStorage implements Storage {
     @Override
     public Resource loadAsResource(String keyName) {
         try {
-            URL url = new URL(generateUrl(keyName));
+            URL url = URI.create(generateUrl(keyName)).toURL();
             Resource resource = new UrlResource(url);
             if (resource.exists() || resource.isReadable()) {
                 return resource;
